@@ -161,8 +161,6 @@ _ITM_rollbackTransaction (void)
   assert ((tx->prop & pr_hasNoAbort) == 0);
   assert ((tx->state & gtm_transaction::STATE_ABORTING) == 0);
 
-  gtm_stack_marker marker;
-
   tx->rollback ();
   tx->state |= gtm_transaction::STATE_ABORTING;
 }
@@ -178,8 +176,6 @@ _ITM_abortTransaction (_ITM_abortReason reason)
 
   if (tx->state & gtm_transaction::STATE_IRREVOCABLE)
     abort ();
-
-  gtm_stack_marker marker;
 
   tx->rollback ();
   gtm_disp()->fini ();
@@ -254,8 +250,6 @@ void ITM_REGPARM
 _ITM_commitTransaction(void)
 {
   gtm_transaction *tx = gtm_tx();
-  gtm_stack_marker marker;
-
   if (!tx->trycommit_and_finalize ())
     tx->restart (RESTART_VALIDATE_COMMIT);
 }
@@ -264,8 +258,6 @@ void ITM_REGPARM
 _ITM_commitTransactionEH(void *exc_ptr)
 {
   gtm_transaction *tx = gtm_tx();
-  gtm_stack_marker marker;
-
   if (!tx->trycommit_and_finalize ())
     {
       tx->eh_in_flight = exc_ptr;
