@@ -1,4 +1,12 @@
-2010-06-16  Richard Henderson  <rth@redhat.com>
+2010-06-23  Richard Henderson  <rth@redhat.com>
+
+	* barrier.tpl, beginend.cc, clone.cc, tls.h, memcpy.cc,
+	memset.cc, method-serial.cc: Revert the 2010-06-16 change.
+	* config/x86/target.h (struct gtm_jmpbuf): Change CFA type to void*.
+	* config/alpha/target.h: Likewise.
+	* config/generic/tls.cc (gtm_mask_stack): Use it.
+
+2010-06-23  Richard Henderson  <rth@redhat.com>
 
 	* config/posix/cachepage.cc (gtm_cacheline_page::operator new): Use
 	a mutex instead of trying a lock-free compare-and-swap on the list.
